...
                            </containerView>
                            <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="JbU-62-13k">
                                <rect key="frame" x="20" y="15" width="335" height="30"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="1000" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e0R-RM-Wh
                                        <rect key="frame" x="0.0" y="0.0" width="277" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="GameViewController.TurnLabel"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g3q-lj-0mf">
                                        <rect key="frame" x="285" y="0.0" width="50" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="GameViewController.RestartButton"/>
                                        <state key="normal" title="Restart"/>
                                        <connections>
                                            <action selector="restartGame:" destination="BYZ-38-t0r" eventType="touchUpInside" id="c3U-0D-f14"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
                                <subviews>
                                    <stackView opaque="NO" tag="102" contentMode="scaleToFill" spacing="38" translatesAutoresizingMaskIntoConstraints="NO" id="kNo-MW-d3c">
                                        <rect key="frame" x="0.0" y="0.0" width="256" height="60"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fGT-Na-II2">
                                                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                                <accessibility key="accessibilityConfiguration" identifier="button0"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="60" id="5XS-uE-JnU"/>
                                                    <constraint firstAttribute="height" constant="60" id="BH7-8T-FXh"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="72"/>
                                                <state key="normal" title="x">
...
                                    </stackView>
                                    <stackView opaque="NO" tag="103" contentMode="scaleToFill" spacing="38" translatesAutoresizingMaskIntoConstraints="NO" id="ior-V2-vsM">
                                        <rect key="frame" x="0.0" y="98" width="256" height="60"/>
                                        <subviews>
                                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hTT-LL-Ual">
                                                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                                <accessibility key="accessibilityConfiguration" identifier="button3"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="60" id="0rK-zk-y2M"/>
                                                    <constraint firstAttribute="height" constant="60" id="l5q-iF-k7G"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="72"/>
                                                <state key="normal" title="x">
...
                                    </stackView>
                                    <stackView opaque="NO" tag="104" contentMode="scaleToFill" spacing="38" translatesAutoresizingMaskIntoConstraints="NO" id="0AP-m3-KFb">
                                        <rect key="frame" x="0.0" y="196" width="256" height="60"/>
                                        <subviews>
                                            <button opaque="NO" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3rO-xK-UIC">
                                                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                                <accessibility key="accessibilityConfiguration" identifier="button6"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="60" id="maj-GA-OuI"/>
                                                    <constraint firstAttribute="height" constant="60" id="zMM-JR-Vtg"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="72"/>
                                                <state key="normal" title="x">
...
